# pr-bulk-review-tui-rs

./: .recent-repositories.json  .session.json  Cargo.toml  README.md
.github/workflows/: release-binary-assets.yml  release-pr.yml  release.yml
crates/gh-actions-log-parser/src/: ansi.rs  commands.rs  lib.rs  parser.rs  types.rs
crates/gh-actions-log-parser/tests/: parse_fixture_test.rs  test_ansi_256color.rs
crates/gh-actions-log-parser/tests/fixtures/: job-logs.txt
crates/gh-api-cache/: Cargo.toml
crates/gh-api-cache/src/: lib.rs
crates/gh-pr-tui/: Cargo.toml
crates/gh-pr-tui-command-palette/: Cargo.toml
crates/gh-pr-tui-command-palette/src/: lib.rs  provider.rs  search.rs
crates/gh-pr-tui/src/: actions.rs  cache.rs  command_palette_integration.rs  config.rs  effect.rs  log.rs  log_capture.rs  main.rs  merge_bot.rs  pr.rs  reducer.rs  shortcuts.rs  state.rs  store.rs  task.rs  theme.rs
crates/gh-pr-tui/src/view_models/: command_palette.rs  log_panel.rs  mod.rs  repository_tabs.rs
crates/gh-pr-tui/src/views/: build_log.rs  command_palette.rs  debug_console.rs  help.rs  mod.rs  repositories.rs  splash_screen.rs
crates/pr-bulk-review-tui/src/: log.rs  main.rs  reducer.rs  shortcuts.rs
features/: command-palette-plan.md  mvvm-pr-table-refactoring-plan.md  mvvm-view-model-pattern.md
src/: effect.rs  log.rs  log_capture.rs  main.rs  merge_bot.rs  pr.rs  reducer.rs  shortcuts.rs  state.rs  store.rs  task.rs  theme.rs
