[package]
name = "pr-bulk-review-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
octocrab = "0.43.0"
ratatui = "0.29.0"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zip = "2.2"
bytes = "1.9"
dotenvy = "0.15"
