[workspace]
members = [
    "crates/gh-actions-log-parser",
    "crates/gh-pr-tui",
    "crates/gh-pr-tui-command-palette",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
zip = "2.2"
bytes = "1.9"
tokio = { version = "1", features = ["full"] }
log = "0.4"

# ANSI parsing
ansi-parser = "0.9"

# GitHub API
octocrab = "0.43.0"

# TUI
ratatui = "0.29.0"

# Date/Time
chrono = "0.4"

# Config
toml = "0.8"
dotenvy = "0.15"

# Logging
env_logger = "0.10"

# Parsing
regex = "1.10"
