[package]
name = "gh-api-cache"
version = "0.1.0"
edition = "2021"
authors = ["Sven Kanoldt <sven@d34dl0ck.me>"]
description = "GitHub API response cache with TTL and ETag support"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
